# aws-ofi-nccl

./: .clang-format  .clang-format-ignore  .clang-tidy  .ecrc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .iwyu.imp  .mailmap  .packit.yml  .pre-commit-config.yaml  .travis.yml  .version  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Config  DIAGNOSTICS.md  INSTALL.md  LICENSE  Makefile  Makefile.am  NOTICE  README.md  RELEASENOTES.md  autogen.sh  configure.ac  docker-bake.hcl  flake.nix  libnccl-net-ofi.spec
.docker/: Dockerfile.dnf  (+5 more)
contrib/python/: .gitignore  pyproject.toml  requirements.txt
include/: Makefile.am  nccl_ofi.h  nccl_ofi_api.h  nccl_ofi_assert.h  nccl_ofi_config_bottom.h  nccl_ofi_cuda.h  nccl_ofi_deque.h  nccl_ofi_device_copy.h  nccl_ofi_diag.h  nccl_ofi_dlist.h  nccl_ofi_dmabuf.h  nccl_ofi_environ.h  nccl_ofi_ep_addr_list.h  nccl_ofi_freelist.h  nccl_ofi_gdrcopy.h  nccl_ofi_gin_base.h  nccl_ofi_hcopy.h  nccl_ofi_idpool.h  nccl_ofi_kvstore.h  nccl_ofi_log.h  nccl_ofi_math.h  nccl_ofi_memcheck.h  nccl_ofi_memcheck_asan.h  nccl_ofi_memcheck_nop.h  nccl_ofi_memcheck_valgrind.h  nccl_ofi_mpsc_ring.h  nccl_ofi_mr.h  nccl_ofi_msgbuff.h  nccl_ofi_ncclver.h  nccl_ofi_ofiutils.h  nccl_ofi_param.h  nccl_ofi_param_impl.h  nccl_ofi_platform.h  nccl_ofi_pthread.h  nccl_ofi_rdma.h  nccl_ofi_rocm.h  nccl_ofi_scheduler.h  nccl_ofi_sendrecv.h  nccl_ofi_spinlock.h  nccl_ofi_spsc_ring.h  (+9 more)
include/cm/: nccl_ofi_cm.h  nccl_ofi_cm_comms.h  nccl_ofi_cm_mr.h  nccl_ofi_cm_reqs.h  nccl_ofi_cm_resources.h  nccl_ofi_cm_types.h
include/gin/: nccl_ofi_gin.h  nccl_ofi_gin_allgather.h  nccl_ofi_gin_ep.h  nccl_ofi_gin_reqs.h  nccl_ofi_gin_resources.h  nccl_ofi_gin_types.h
include/internal/tuner/: nccl_defaults.h
include/nccl-headers/: error.h  net.h  net_neuron.h  net_v2.h  net_v3.h  net_v4.h  net_v6.h  types.h
include/nccl-headers/net-ofi/: net_ofi_v2.h  net_ofi_v3.h  net_ofi_v4.h  net_ofi_v6.h
include/nccl-headers/neuron/: error.h  net.h  net_v4.h
include/nccl-headers/nvidia/: net.h  net_device.h  net_v3.h  net_v5.h  tuner.h  tuner_v1.h
include/ofi/: nccl_ofi_ofiwrapper.h  resource_wrapper.h
include/rdma/: nccl_ofi_rdma_communicator.h  nccl_ofi_rdma_constants.h  nccl_ofi_rdma_device.h  nccl_ofi_rdma_domain.h  nccl_ofi_rdma_endpoint.h  nccl_ofi_rdma_freelist_regmr_fn_handle.h  nccl_ofi_rdma_messages.h  nccl_ofi_rdma_mr_handle.h  nccl_ofi_rdma_plugin.h  nccl_ofi_rdma_request.h
include/rdma/gin/: nccl_ofi_gin.h  nccl_ofi_gin_allgather.h  nccl_ofi_gin_api.h  nccl_ofi_gin_gdaki.h  nccl_ofi_gin_gdaki_ctx.h  nccl_ofi_gin_gdaki_dev.h  nccl_ofi_gin_gdaki_resources.h  nccl_ofi_gin_reqs.h  nccl_ofi_gin_resources.h  nccl_ofi_gin_types.h
include/stats/: histogram.h  histogram_bin.h  histogram_binner.h  histogram_def.h  histogram_formatter.h  histogram_formatter_impl.h  histogram_impl.h
include/tracing_impl/: lttng.h  nvtx.h
include/tuner/: nccl_ofi_tuner.h  nccl_ofi_tuner_common.h  nccl_ofi_tuner_model.h  nccl_ofi_tuner_process_config.h  nccl_ofi_tuner_region.h
src/: Makefile.am  Makefile.objs  compat_v2.c  compat_v3.c  compat_v4.c  compat_v5.c  compat_v6.c  hcopy.c  instance-aws.c  nccl_ofi_api.c  nccl_ofi_api.cpp  nccl_ofi_assert.cpp  nccl_ofi_compat.c  nccl_ofi_compat.cpp  nccl_ofi_cuda.c  nccl_ofi_cuda.cpp  nccl_ofi_deque.c  nccl_ofi_dmabuf.c  nccl_ofi_dmabuf.cpp  nccl_ofi_ep_addr_list.c  nccl_ofi_ep_addr_list.cpp  nccl_ofi_freelist.c  nccl_ofi_freelist.cpp  nccl_ofi_gdrcopy.cpp  nccl_ofi_idpool.c  nccl_ofi_idpool.cpp  nccl_ofi_interface_neuron.c  nccl_ofi_interface_neuron.cpp  nccl_ofi_interface_nvidia.c  nccl_ofi_interface_nvidia.cpp  nccl_ofi_kvstore.cc  nccl_ofi_mr.c  nccl_ofi_mr.cpp  nccl_ofi_msgbuff.c  nccl_ofi_msgbuff.cpp  nccl_ofi_nccl_compat.cpp  nccl_ofi_ncclver.c  nccl_ofi_net.c  nccl_ofi_net.cpp  nccl_ofi_ofiutils.c  (+27 more)
src/cm/: nccl_ofi_cm.cpp  nccl_ofi_cm_comms.cpp  nccl_ofi_cm_reqs.cpp  nccl_ofi_cm_resources.cpp
src/gin/: nccl_ofi_gin.cpp  nccl_ofi_gin_allgather.cpp  nccl_ofi_gin_api.cpp  nccl_ofi_gin_ep.cpp  nccl_ofi_gin_reqs.cpp  nccl_ofi_gin_resources.cpp
src/rdma/gin/: nccl_ofi_gin.cpp  nccl_ofi_gin_allgather.cpp  nccl_ofi_gin_api.cpp  nccl_ofi_gin_gdaki.cpp  nccl_ofi_gin_gdaki_resources.cpp  nccl_ofi_gin_reqs.cpp  nccl_ofi_gin_resources.cpp
src/stats/: histogram.cpp
src/tuner/: Makefile.am  nccl_ofi_model.c  nccl_ofi_model.cpp  nccl_ofi_regions.c  nccl_ofi_regions.cpp  nccl_ofi_tuner.c  nccl_ofi_tuner.cpp
tests/: .clang-tidy  Makefile.am  Makefile.objs  nccl_connection.c  nccl_message_transfer.c  ring.c  test-common.h
tests/functional/: .gitignore  Makefile.am  README.md  cuda_check.c  eager_multirecv.cpp  efa_direct_wqe.cpp  efa_direct_wqe.h  functional_test.cpp  functional_test.h  gin.cpp  gin_duplicate_mr.cpp  gin_gdaki_misconfig_probe.cpp  gin_multiseg_signal.cpp  gin_put_gdaki.cpp  gin_put_gdaki_gpu.cu  gin_signal_gdaki.cpp  gin_signal_gdaki_gpu.cu  grouped_recv.cpp  inflight_close.cpp  nccl_abort.cpp  nccl_connection.c  nccl_connection.cc  nccl_connection.cpp  nccl_message_transfer.c  nccl_message_transfer.cc  nccl_message_transfer.cpp  reuse_listen_comm.cpp  ring.c  ring.cc  ring.cpp  test-common.h  test-common.hpp
tests/functional_nccl/: .gitignore  Makefile.am  a2a_abort.cpp
tests/integration/: Makefile.am  README.md  tuner_iterations.sh
tests/scripts/: .gitignore  AGENTS.md  README.md  check-test-results.sh  env.sh.example  run-functional-tests.sh  run-nccl-tests.sh  run-slurm.sh.example
tests/unit/: .gitignore  GTEST_README.md  Makefile.am  assert.cpp  aws_platform_mapper.c  aws_platform_mapper.cpp  ctrl_msg.cpp  deque.c  deque.cc  dlist  dlist.cpp  dlopen_c_test.c  environ.cpp  ep_addr_list.c  ep_addr_list.cc  ep_addr_list.cpp  freelist.c  freelist.cc  freelist.cpp  gdrcopy.cpp  histogram.cpp  histogram_binner.cpp  idpool.c  idpool.cc  idpool.cpp  libfabric_mock.h  libfabric_mock_impl.cpp  libfabric_mock_test.cpp  mpsc_ring.cpp  mr.c  mr.cc  mr.cpp  msgbuff.c  msgbuff.cc  msgbuff.cpp  ofiutils_get_providers_test.cpp  param.cpp  platform_detection.cpp  platform_manager.cpp  region_based_tuner.c  (+14 more)
(+107 files in other folders)
