#
# Copyright (c) 2023-2024 Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

noinst_HEADERS = \
	nccl_ofi.h \
	nccl_ofi_api.h \
	nccl_ofi_config_bottom.h \
	nccl_ofi_cuda.h \
	nccl_ofi_deque.h \
	nccl_ofi_freelist.h \
	nccl_ofi_idpool.h \
	nccl_ofi_log.h \
	nccl_ofi_math.h \
	nccl_ofi_memcheck.h \
	nccl_ofi_memcheck_asan.h \
	nccl_ofi_memcheck_nop.h \
	nccl_ofi_memcheck_valgrind.h \
	nccl_ofi_mr.h \
	nccl_ofi_msgbuff.h \
	nccl_ofi_param.h \
	nccl_ofi_pthread.h \
	nccl_ofi_rdma.h \
	nccl_ofi_sendrecv.h \
	nccl_ofi_scheduler.h \
	nccl_ofi_topo.h \
	nccl_ofi_tuner.h \
	nccl_ofi_ofiutils.h \
	nccl_ofi_dmabuf.h \
	nccl_ofi_tracepoint.h \
	tracing_impl/lttng.h \
	tracing_impl/nvtx.h \
	internal/tuner/nccl_defaults.h \
	nccl-headers/net.h \
	nccl-headers/error.h \
	nccl-headers/nvidia/err.h \
	nccl-headers/nvidia/net.h \
	nccl-headers/nvidia/net_device.h \
	nccl-headers/nvidia/net_v2.h \
	nccl-headers/nvidia/net_v3.h \
	nccl-headers/nvidia/net_v4.h \
	nccl-headers/nvidia/net_v5.h \
	nccl-headers/nvidia/net_v6.h \
	nccl-headers/nvidia/net_v7.h \
	nccl-headers/nvidia/net_v8.h \
	nccl-headers/nvidia/types.h \
	nccl-headers/nvidia/tuner.h \
	nccl-headers/nvidia/tuner_v1.h \
	nccl-headers/nvidia/tuner_v2.h \
	nccl-headers/neuron/net.h \
	nccl-headers/neuron/net_v4.h \
	nccl-headers/neuron/net_v5.h \
	nccl-headers/neuron/error.h \
	nccl_ofi_platform.h \
	contrib/uthash.h \
	contrib/utlist.h \
	nccl_ofi_ep_addr_list.h
