#
# Copyright (c) 2023-2024 Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

noinst_HEADERS = \
	nccl_ofi.h \
	nccl_ofi_api.h \
	nccl_ofi_config_bottom.h \
	nccl_ofi_cuda.h \
	nccl_ofi_freelist.h \
	nccl_ofi_idpool.h \
	nccl_ofi_log.h \
	nccl_ofi_math.h \
	nccl_ofi_memcheck.h \
	nccl_ofi_memcheck_asan.h \
	nccl_ofi_memcheck_nop.h \
	nccl_ofi_memcheck_valgrind.h \
	nccl_ofi_mr.h \
	nccl_ofi_msgbuff.h \
	nccl_ofi_param.h \
	nccl_ofi_pthread.h \
	rdma/nccl_ofi_rdma_communicator.h \
	rdma/nccl_ofi_rdma_constants.h \
	rdma/nccl_ofi_rdma_device.h \
	rdma/nccl_ofi_rdma_domain.h \
	rdma/nccl_ofi_rdma_endpoint.h \
	rdma/nccl_ofi_rdma_messages.h \
	rdma/nccl_ofi_rdma_mr_handle.h \
	rdma/nccl_ofi_rdma_plugin.h \
	rdma/nccl_ofi_rdma_request.h \
	nccl_ofi_sendrecv.h \
	nccl_ofi_scheduler.h \
	nccl_ofi_system.h \
	nccl_ofi_topo.h \
	tuner/nccl_ofi_tuner.h \
	tuner/nccl_ofi_tuner_common.h \
	tuner/nccl_ofi_tuner_region.h \
	tuner/nccl_ofi_tuner_model.h \
	nccl_ofi_ofiutils.h \
	nccl_ofi_dmabuf.h \
	nccl_ofi_tracepoint.h \
	tracing_impl/lttng.h \
	tracing_impl/nvtx.h \
	internal/tuner/nccl_defaults.h \
	nccl_ofi_platform.h \
	nccl_ofi_ep_addr_list.h \
	platform-aws.h
