#
# Copyright (c) 2023-2025 Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

noinst_HEADERS = \
	cm/nccl_ofi_cm_reqs.h \
	cm/nccl_ofi_cm_resources.h \
	cm/nccl_ofi_cm_types.h \
	cm/nccl_ofi_cm.h \
	gin/nccl_ofi_gin.h \
	gin/nccl_ofi_gin_allgather.h \
	gin/nccl_ofi_gin_reqs.h \
	gin/nccl_ofi_gin_resources.h \
	gin/nccl_ofi_gin_types.h \
	nccl_ofi.h \
	nccl_ofi_api.h \
	nccl_ofi_assert.h \
	nccl_ofi_config_bottom.h \
	nccl_ofi_cuda.h \
	nccl_ofi_device_copy.h \
	nccl_ofi_dmabuf.h \
	nccl_ofi_environ.h \
	nccl_ofi_ep_addr_list.h \
	nccl_ofi_freelist.h \
	nccl_ofi_gdrcopy.h \
	nccl_ofi_idpool.h \
	nccl_ofi_log.h \
	nccl_ofi_math.h \
	nccl_ofi_memcheck.h \
	nccl_ofi_memcheck_asan.h \
	nccl_ofi_memcheck_nop.h \
	nccl_ofi_memcheck_valgrind.h \
	nccl_ofi_mr.h \
	nccl_ofi_msgbuff.h \
	nccl_ofi_ofiutils.h \
	nccl_ofi_param.h \
	nccl_ofi_param_impl.h \
	nccl_ofi_platform.h \
	nccl_ofi_pthread.h \
	nccl_ofi_rdma.h \
	nccl_ofi_scheduler.h \
	nccl_ofi_sendrecv.h \
	nccl_ofi_system.h \
	nccl_ofi_topo.h \
	nccl_ofi_tracepoint.h \
	ofi/resource_wrapper.h \
	platform-aws.h \
	internal/tuner/nccl_defaults.h \
	stats/histogram.h \
	stats/histogram_binner.h \
	tracing_impl/lttng.h \
	tracing_impl/nvtx.h \
	tuner/nccl_ofi_tuner.h \
	tuner/nccl_ofi_tuner_common.h \
	tuner/nccl_ofi_tuner_process_config.h \
	tuner/nccl_ofi_tuner_region.h \
	tuner/nccl_ofi_tuner_model.h
